[package]
name = "websh-tunnel"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.51.1", features = ["full"] }
futures-util = "0.3.32"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.139"
axum = { version = "0.8.8", features = ["ws"] }
dotenvy = "0.15.7"
