[package]
name = "websh-tunnel"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.52.0", features = ["full"] }
futures-util = "0.3.32"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
axum = { version = "0.8.9", features = ["ws"] }
dotenvy = "0.15.7"
reqwest = { version = "0.13.2", features = ["json"] }
